--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-input-calendar": "^0.4.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-test-renderer": "^16.1.1",
     "redux": "^3.7.2"
   },
   "scripts": {
